--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas-sketch-util": "^1.10.0",
     "colord": "^2.9.3",
     "eases": "^1.0.8",
+    "framer-motion": "^11.2.4",
     "json5": "^2.2.3",
     "leva": "^0.9.34",
     "maath": "^0.5.3",
@@ -23,7 +24,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-merge-refs": "^2.0.1",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
