--- a/package.json
+++ b/package.json
@@ -11,19 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
-    "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.164.0",
-    "canvas-sketch-util": "^1.10.0",
-    "colord": "^2.9.3",
-    "eases": "^1.0.8",
     "framer-motion": "^11.2.4",
-    "json5": "^2.2.3",
-    "leva": "^0.9.34",
-    "maath": "^0.5.3",
-    "postprocessing": "^6.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-merge-refs": "^2.0.1",
     "splitting": "^1.0.6",
     "three": "^0.164.1",
     "zustand": "^4.5.2"
@@ -34,13 +25,11 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
-    "babel-plugin-glsl": "^1.0.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vite-plugin-babel-macros": "^1.0.6"
+    "vite": "^4.1.0"
   }
 }
